--- a/src/index.css
+++ b/src/index.css
@@ -368,3 +368,13 @@
     gap: 10rem !important;
   }
 }
+
+@media screen and (min-width: 1400px) {
+  .profilePic {
+    width: 30% !important;
+  }
+
+  .laptopContainer {
+    margin-top: 20rem !important;
+  }
+}
