--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -155,6 +155,10 @@ h4 {
   background-color: #ebebeb;
   color: #d10202;
 }
+.techReact {
+  background-color: #4ad0eb;
+  color: white;
+}
 
 .projectLinksBottom {
   display: grid;
