--- a/src/index.css
+++ b/src/index.css
@@ -380,6 +380,9 @@
 }
 
 @media screen and (min-width: 1800px) {
+  .introHeadingsContainer {
+    margin-left: 6rem;
+  }
   .profilePic {
     width: 30% !important;
   }
